--- a/src/main/resources/templates/Movies/form.html
+++ b/src/main/resources/templates/Movies/form.html
@@ -2,10 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Film Registration</title>
 </head>
 <body>
-    <h1>Film Registration</h1>
+    <header>
+        <h1>Film Registration</h1>
+    </header>
+<div class="container">
+    <div id="formAddMovies">
+
+        <label for="name">Movie name: </label>
+        <input type="text" name="name" id="movie-name"> 
+
+        <label for="duration">Movie duration: </label>
+        <input type="text" name="duration" id="movie-duration">
+
+        <label for="synopsis">Movie synopsis: </label>
+        <input type="text" name="synopsis" id="movie-synopsis">        
+        <label for="gender">Movie gender: </label>
+        <input type="text" name="gender" id="movie-gender">
+
+        <input type="submit" value="Register">
+
+    </div>
+</div>
+
 
 </body>
 </html>
