--- a/src/main/resources/templates/Movies/form.html
+++ b/src/main/resources/templates/Movies/form.html
@@ -8,6 +8,7 @@
 <body>
     <header>
         <h1>Film Registration</h1>
+        <h1>Film Registration</h1>
     </header>
 <div class="container">
     <div id="formAddMovies">
