--- a/src/main/resources/templates/Movies/form.html
+++ b/src/main/resources/templates/Movies/form.html
@@ -8,20 +8,19 @@
 <body>
     <header>
         <h1>Film Registration</h1>
-        <h1>Film Registration</h1>
     </header>
 <div class="container">
     <div id="formAddMovies">
 
-        <label for="name">Movie name: </label>
+        <label for="movie-name">Movie name: </label>
         <input type="text" name="name" id="movie-name"> 
 
-        <label for="duration">Movie duration: </label>
+        <label for="movie-duration">Movie duration: </label>
         <input type="text" name="duration" id="movie-duration">
 
-        <label for="synopsis">Movie synopsis: </label>
+        <label for="movie-synopsis">Movie synopsis: </label>
         <input type="text" name="synopsis" id="movie-synopsis">        
-        <label for="gender">Movie gender: </label>
+        <label for="movie-gender">Movie gender: </label>
         <input type="text" name="gender" id="movie-gender">
 
         <input type="submit" value="Register">
