was maked interaction between register movie and movie list

--- a/src/main/resources/templates/Movies/form.html
+++ b/src/main/resources/templates/Movies/form.html
@@ -9,7 +9,7 @@
     <header>
         <h1>Film Registration</h1>
     </header>
-        <form method="post">
+        <form method="post", action="/movies">
             <label for="movie-name">Movie name: </label>
             <input type="text" name="name" id="movie-name">
             <br/>
